firmware/lib/control-table/tests/ui/dup_same_side_bound.stderr
error: two immediate bounds on the same side of one field
 --> tests/ui/dup_same_side_bound.rs:7:5
  |
7 |     x: u8,
  |     ^
